refactor: Security Hotspots, Maintainability 해결